--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -4,14 +4,18 @@
 <h3>Edit a task</h3>
 
 <div class="row">
-    <form action="{{ url_for('insert_task') }}" method="POST" class="col s12">
+    <form action="{{ url_for('update_task', task_id=task._id) }}" method="POST" class="col s12">
         <div class="row">
             <div id="matfix2" class="input-field col s12">
                 <i class="material-icons prefix">poll</i>
                 <select id="category" name="category_name">
                     <option value="" disabled selected>Choose Category</option>
                     {% for cat in categories %}
-                    <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                        {% if cat.category_name == task.category_name %}
+                            <option value="{{cat.category_name}}" selected>{{cat.category_name}}</option>
+                        {% else %}
+                            <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
                 <label>Task Category</label>
@@ -20,14 +24,14 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">assignment</i>
-                <input id="task_name" name="task_name" type="text" class="validate">
+                <input id="task_name" name="task_name" type="text" class="validate" value="{{ task.task_name }}">
                 <label for="icon_prefix">Task Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">subject</i>
-                <textarea id="task_description" name="task_description" type="textarea" class="materialize-textarea"></textarea>
+                <textarea id="task_description" name="task_description" type="textarea" class="materialize-textarea">{{ task.task_description }}</textarea>
                 <label for="task_description">Task Description</label>
             </div>
         </div>
@@ -41,19 +45,29 @@
         <div class="row">
             <div class="switch">
                 <label>
-                    <input id="is_urgent" name="is_urgent" type="checkbox">
+                    {% if task.is_urgent %}
+                        <input id="is_urgent" name="is_urgent" type="checkbox" checked>
+                    {% else %}
+                        <input id="is_urgent" name="is_urgent" type="checkbox">
+                    {% endif %}
                     <span class="lever"></span>
                     Is Urgent
                 </label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+            <button class="btn waves-effect waves-light" type="submit" name="action">Edit Task
                 <i class="material-icons right">playlist_add</i>
             </button>
         </div>
     </form>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function() {
+        let due_date = Date.parse("{{ task.due_date }}");
+        $("#due_date").pickdate("picker").set("select", due_date, {format: "dd/mm/yyyy"}).trigger("change"); 
+    });
+</script>
 {% endblock %}
 
