--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
+<h3>Tasks</h3>
+
 {% for task in tasks %}
     
     <!-- {{task.category_name}}
@@ -12,7 +14,7 @@
             <div class="collapsible-header">
                 <div class="col s3">
                     <i class="material-icons">expand_more</i>
-                    <a class="waves-effect waves-light btn btn_small">Done</a>
+                    <a href= "{{ url_for('delete_task', task_id=task._id) }}" class="waves-effect waves-light btn btn_small">Del</a>
                     <a href= "{{ url_for('edit_task', task_id=task._id) }}" class="waves-effect waves-light btn btn_small blue">Edit</a>
                 </div>
                 <div class="task_header col s9">
