--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,24 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="{{url_for('get_tasks')}}" class="brand-logo">Task Manager</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="{{url_for('get_tasks')}}">Home</a></li>
+                    <li><a href="{{url_for('add_task')}}">New Task</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="{{url_for('get_tasks')}}">Home</a></li>
+                    <li><a href="{{url_for('add_task')}}">New Task</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Manage Categories</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="container">
         {% block content %}
         {% endblock %}
@@ -16,13 +34,14 @@
         $(document).ready(function() {
             $(".collapsible").collapsible();
             $("select").material_select();
+            $(".button-collapse").sideNav();
         });
-        $('.datepicker').pickadate({
+        $(".datepicker").pickadate({
             selectMonths: true, // Creates a dropdown to control month
             selectYears: 15, // Creates a dropdown of 15 years to control year,
-            today: 'Today',
-            clear: 'Choose Again',
-            close: 'Save & Close',
+            today: "Today",
+            clear: "Choose Again",
+            close: "Save & Close",
             closeOnSelect: false // Close upon selecting a date,
         });
         document.getElementById("matfix").addEventListener("click", function(e) {
