--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,21 +2,16 @@
 {% block content %}
 
 <div class="row">
-
     <h3>Categories</h3>
 
     {% for category in categories %}
-        
-        <!-- {{task.category_name}}
-        
-        {{task.is_urgent}} -->
             
         <ul class="collapsible">
             <li>
                 <div class="collapsible-header">
-                    <a href= "" class="waves-effect waves-light btn btn_small">Del</a>
-                    <a href= "" class="waves-effect waves-light btn btn_small blue">Edit</a>
-                    <div class="task_header col s9">
+                    <a href= "{{ url_for('delete_category', category_id = category._id) }}" class="waves-effect waves-light btn btn_small">Del</a>
+                    <a href= "{{ url_for('edit_category', category_id = category._id) }}" class="waves-effect waves-light btn btn_small blue">Edit</a>
+                    <div class="task_header">
                         <strong>{{category.category_name}}</strong>
                     </div>
                 </div>
@@ -25,6 +20,10 @@
 
     {% endfor %}
 
+</div>
+
+<div class="row">
+    <a href="{{ url_for('new_category') }}" class="waves-effect waves-light btn"><i class="material-icons right">playlist_add</i>Add Category</a>
 </div>
 
 {% endblock %}
